gccida/g0/noce_emit_store_flag
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_emit_store_flag/src/ifcvt.c:978:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+34h] [rbp-Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_emit_store_flag/src/ifcvt.c:992:30: error: use of undeclared identifier 'machine_mode'
v5 = gen_rtx_fmt_ee( code, ( machine_mode)*( ( unsigned __int8 *)x + 2), cond->fld[0].rtx, *( rtx *)&cond[1]); 
                             ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_emit_store_flag/src/obj/ifcvt.o] Error 1
